cập nhật bán hàng !

--- a/BANHANG/BANHANG.Server/Web.config
+++ b/BANHANG/BANHANG.Server/Web.config
@@ -16,11 +16,11 @@
     <!-- A value of true will indicate that HTTP requests should be redirected to HTTPS -->
     <add key="Microsoft.LightSwitch.RequireEncryption" value="True" />
     <!-- If no admin user exists, create an admin user with this user name -->
-    <add key="Microsoft.LightSwitch.Admin.UserName" value="" />
+    <add key="Microsoft.LightSwitch.Admin.UserName" value="admin" />
     <!-- When creating an admin user with Forms auth, use this as the full name -->
-    <add key="Microsoft.LightSwitch.Admin.FullName" value="" />
+    <add key="Microsoft.LightSwitch.Admin.FullName" value="admin" />
     <!-- When creating an admin user with Forms auth, use this as the password -->
-    <add key="Microsoft.LightSwitch.Admin.Password" value="" />
+    <add key="Microsoft.LightSwitch.Admin.Password" value="Lekhanhky@110484" />
     <!-- This value should only be changed by setting the Default Language property in the Application Designer -->
     <add key="ApplicationCulture" value="vi" />
     <add key="SupportedCultures" value="vi" />
@@ -156,7 +156,9 @@
         <add assembly="Microsoft.LightSwitch.Server, Version=12.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms name="BANHANG" />
+    </authentication>
     <pages validateRequest="false">
       <controls>
         <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -165,6 +167,27 @@
     </pages>
     <!-- Setting maxRequestLength to be much greater than default 4096 so that large data may be uploaded e.g. images, docs -->
     <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" maxRequestLength="102400" targetFramework="4.5" />
+    <membership defaultProvider="AspNetMembershipProvider">
+      <providers>
+        <clear />
+        <add name="AspNetMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="_IntrinsicData" applicationName="BANHANG" requiresUniqueEmail="false" requiresQuestionAndAnswer="false" />
+      </providers>
+    </membership>
+    <roleManager enabled="True" defaultProvider="AspNetRoleProvider">
+      <providers>
+        <clear />
+        <add name="AspNetRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="_IntrinsicData" applicationName="BANHANG" />
+      </providers>
+    </roleManager>
+    <profile enabled="True" defaultProvider="AspNetProfileProvider">
+      <providers>
+        <clear />
+        <add name="AspNetProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="_IntrinsicData" applicationName="BANHANG" />
+      </providers>
+      <properties>
+        <add name="FullName" />
+      </properties>
+    </profile>
   </system.web>
   <system.codedom>
     <compilers>
