--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -490,12 +490,12 @@
     <LightSwitchModel Include="DataSources\BanHangData\vTồn_Quỹ_Tiền_Mặt.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData1\vTồn_Công_Nợ_Phải_Thu_Khách_Hàng.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData1\vTồn_Công_Nợ_Phải_Trả_Nhà_Cung_Cấp.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Bàn.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\Ban.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\Chọn_Món.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\Chọn_Món_Chi_Tiết.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Khu_Vực.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Món.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Nhóm_Món.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\KhuVuc.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\Mon.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\NhomMon.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -509,6 +509,8 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <_ServerFile Include="LogIn.aspx" />
+    <_ServerFile Include="LogOut.aspx" />
     <Content Include="Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
