--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -149,6 +149,7 @@
     <Reference Include="System.Runtime.Serialization">
       <ProjectCritical>True</ProjectCritical>
     </Reference>
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml">
       <ProjectCritical>True</ProjectCritical>
     </Reference>
@@ -268,12 +269,10 @@
     <Compile Include="DataSources\BanHangData1\NhapSanPhamDauKyChiTiet.lsml.vb">
       <DependentUpon>Nhập_Sản_Phẩm_Đầu_Kỳ_Chi_Tiết.lsml</DependentUpon>
     </Compile>
-    <Compile Include="DataSources\BanHangDataQuan\Chọn_MónItem.lsml.vb">
-      <DependentUpon>Chọn_Món.lsml</DependentUpon>
+    <Compile Include="DataSources\BanHangDataQuan\ChonMon1.lsml.vb">
+      <DependentUpon>ChonMons.lsml</DependentUpon>
     </Compile>
-    <Compile Include="DataSources\BanHangDataQuan\Chọn_Món_Chi_TiếtItem.lsml.vb">
-      <DependentUpon>Chọn_Món_Chi_Tiết.lsml</DependentUpon>
-    </Compile>
+    <Compile Include="DataSources\BanHangDataQuan\_BanHangDataQuanService.lsml.vb" />
     <Compile Include="DataSources\BanHangData\BangGiaChiTiet.lsml.vb">
       <DependentUpon>Bảng_Giá_Chi_Tiết.lsml</DependentUpon>
     </Compile>
@@ -309,6 +308,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Web\GetUserName.ashx.vb">
+      <DependentUpon>GetUserName.ashx</DependentUpon>
     </Compile>
     <Compile Include="XtraReport_Chi.Designer.vb">
       <DependentUpon>XtraReport_Chi.vb</DependentUpon>
@@ -491,11 +493,11 @@
     <LightSwitchModel Include="DataSources\BanHangData1\vTồn_Công_Nợ_Phải_Thu_Khách_Hàng.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData1\vTồn_Công_Nợ_Phải_Trả_Nhà_Cung_Cấp.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\Ban.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Chọn_Món.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Chọn_Món_Chi_Tiết.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\KhuVuc.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\Mon.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\NhomMon.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\ChonMons.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\ChonMonChiTiets.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -509,6 +511,7 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <Content Include="Web\GetUserName.ashx" />
     <_ServerFile Include="LogIn.aspx" />
     <_ServerFile Include="LogOut.aspx" />
     <Content Include="Web.config" />
@@ -615,7 +618,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:2529/</IISUrl>
+          <IISUrl>http://localhost:1084/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
