--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -498,6 +498,7 @@
     <LightSwitchModel Include="DataSources\BanHangDataQuan\ChonMonChiTiets.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMons.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMonChiTiets.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\SoLuongs.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
