--- a/BANHANG/BANHANG.Server/Web.config
+++ b/BANHANG/BANHANG.Server/Web.config
@@ -14,7 +14,7 @@
     <!-- The semicolon-separated list of categories that will be enabled at the specified trace level -->
     <add key="Microsoft.LightSwitch.Trace.Categories" value="Microsoft.LightSwitch" />
     <!-- A value of true will indicate that HTTP requests should be redirected to HTTPS -->
-    <add key="Microsoft.LightSwitch.RequireEncryption" value="True" />
+    <add key="Microsoft.LightSwitch.RequireEncryption" value="False" />
     <!-- If no admin user exists, create an admin user with this user name -->
     <add key="Microsoft.LightSwitch.Admin.UserName" value="admin" />
     <!-- When creating an admin user with Forms auth, use this as the full name -->
@@ -133,9 +133,9 @@
   <connectionStrings>
     <add name="_IntrinsicData" connectionString="Data Source=|SqlExpressInstanceName|;AttachDbFilename=|ApplicationDatabasePath|;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True" />
     <add name="a62f9901-147e-4e67-bc41-d693e6841d15" connectionString="" />
-    <add name="ec6ac6a3-3759-428f-b53c-cecc731dfe48" connectionString="Data Source=.\sqlexpress;Initial Catalog=BanHang;Persist Security Info=True;User ID=sa;Password=lekhanhky" />
     <add name="0719c8b5-ea55-47fc-87da-c9a50c30d88d" connectionString="Data Source=.\sqlexpress;Initial Catalog=BanHang;Persist Security Info=True;User ID=sa;Password=lekhanhky" />
     <add name="8b0f8ec0-44ae-416e-a89a-d0afc85e7c25" connectionString="Data Source=.\sqlexpress;Initial Catalog=BanHang;Persist Security Info=True;User ID=sa;Password=lekhanhky" />
+    <add name="ec6ac6a3-3759-428f-b53c-cecc731dfe48" connectionString="Data Source=.\sqlexpress;Initial Catalog=BanHang;Persist Security Info=True;User ID=sa;Password=lekhanhky" />
   </connectionStrings>
   <system.web>
     <!-- LightSwitch trace.axd handler -->
