--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -499,6 +499,12 @@
     <LightSwitchModel Include="DataSources\BanHangData\ChonMons.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMonChiTiets.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\SoLuongs.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\Chi_Công_Nợ.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\Chi_Công_Nợ_Chi_Tiết.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\ThuCongNo.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\ThuCongNoChiTiet.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\Xuất_Sản_Phẩm.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\Xuất_Sản_Phẩm_Chi_Tiết.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
