--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -529,6 +529,7 @@
     <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTheoMons.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTheoPhieus.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTongHops.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTongHops1.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
