--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -538,9 +538,9 @@
     <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTheoMons.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTheoPhieus.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\vDoanhThuQuanTongHops.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Đơn_Vị_Tính.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\DonViTinh.lsml" />
     <LightSwitchModel Include="DataSources\BanHangDataQuan\MonDinhLuongs.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangDataQuan\Sản_Phẩm.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangDataQuan\SanPham.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
